--- a/brianchan.me/style.css
+++ b/brianchan.me/style.css
@@ -1,16 +1,20 @@
-footer {
+.article {
+	font-size: 1.2em;
+}
+
+.footer {
 	border-top: 1px solid #e5e5e5;
 	padding: 10px;
 	text-align: right;
 	margin-top: 10px;
 }
 
-footer a>img {
+.footer a>img {
 	opacity: 0.3;
 	height: 30px;
 }
 
-footer a>img:hover {
+.footer a>img:hover {
 	opacity: 1;
 }
 
@@ -41,4 +45,11 @@ iframe {
   h1 {
     font-size: 1.7em;
   }
+}
+
+/* causes book covers to disappear for devices with a small viewport */
+@media (max-width: 992px) { 
+	.cover {
+		display: none;
+	}
 }
